# sorting-visualizer

./: README.md  asset-manifest.json  index.html  package-lock.json  package.json
backend/: .dockerignore  CMakeLists.txt  Dockerfile  main.cpp  vcpkg.json
backend/controllers/: AlgorithmController.cpp  AlgorithmController.h
backend/middleware/: CorsFilter.cpp  CorsFilter.h
backend/models/: AnimationModels.h
backend/services/: AlgorithmService.cpp  AlgorithmService.h
backend/services/algorithms/: GraphAlgorithms.cpp  GraphAlgorithms.h  SearchingAlgorithms.cpp  SearchingAlgorithms.h  SortingAlgorithms.cpp  SortingAlgorithms.h  StructureAlgorithms.cpp  StructureAlgorithms.h
backend/utils/: JsonUtils.cpp  JsonUtils.h
frontend/: .env.production  index.html  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/components/comparison/: CompareMode.tsx
frontend/src/components/layout/: GlobalSearch.tsx  LandingPage.tsx  Sidebar.tsx  TopNavbar.tsx
frontend/src/components/panels/: CodePanel.tsx  ControlsPanel.tsx  ExplanationPanel.tsx  StatisticsPanel.tsx
frontend/src/data/: algorithms.ts  educationalData.ts
frontend/src/hooks/: useAnimationPlayer.ts
frontend/src/services/: algorithmApi.ts  datasetService.ts
frontend/src/types/: algorithm.ts
static/css/: main.c1339037.css  main.c1339037.css.map
static/js/: 453.0c501c7f.chunk.js  453.0c501c7f.chunk.js.map  453.6cb671ed.chunk.js  453.6cb671ed.chunk.js.map  main.bb6681c9.js  main.bb6681c9.js.map  main.c5e6b483.js  main.c5e6b483.js.map
(+4 files in other folders)
